5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1594_2043.log
== TEST (2019-03-19 16:27:01) 
-- CODE:
a=0.0
b=0.0
c=9.0
d=10.0
p1=1
p2=2
p3=3
p4=4
media= (int(a*p1)+(b*p2)+(c*p3)+(d*p4)/(p1+p2+p3+p4))
print(round(media, 2)

-- ERROR:
File "XXXX", line 11
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:27:12) 
-- CODE:
a=0.0
b=0.0
c=9.0
d=10.0
p1=1
p2=2
p3=3
p4=4
media= (int(a*p1)+(b*p2)+(c*p3)+(d*p4)/(p1+p2+p3+p4))
print(round(media, 2))

-- OUTPUT:
31.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:28:39) 
-- CODE:
a=0.0
b=0.0
c=9.0
d=10.0
p1=1
p2=2
p3=3
p4=4
media= (int((a*p1)+(b*p2)+(c*p3)+(d*p4))/(p1+p2+p3+p4))
print(round(media, 2))

-- OUTPUT:
6.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:28:41) 
-- CODE:
a=0.0
b=0.0
c=9.0
d=10.0
p1=1
p2=2
p3=3
p4=4
media= (int((a*p1)+(b*p2)+(c*p3)+(d*p4))/(p1+p2+p3+p4))
print(round(media, 2))

-- EXECUTION TIME:
0.131315
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
6.7
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
6.7
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
6.7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:44:53) 
-- CODE:
a=0.0
b=0.0
c=9.0
d=10.0
p1=1
p2=2
p3=3
p4=4
media= (int((a*p1)+(b*p2)+(c*p3)+(d*p4))/(p1+p2+p3+p4))
print(round(media, 2))

-- OUTPUT:
6.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:44:29) 
-- CODE:
var1=int(input("nota1:"))
var2=int(input("nota2:"))
var3=int(input("nota3:"))
var4=int(input("nota4:"))
x=((var1*1)+(var2*2)+(var3*3)+(var4*4))/(10)
print(round(x, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 16:44:37) 
-- CODE:
var1=int(input("nota1:"))
var2=int(input("nota2:"))
var3=int(input("nota3:"))
var4=int(input("nota4:"))
x=((var1*1)+(var2*2)+(var3*3)+(var4*4))/(10)
print(round(x, 2))

-- EXECUTION TIME:
0.135925
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    var2=int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:45:09) 
-- CODE:
var1=float(input("nota1:"))
var2=float(input("nota2:"))
var3=float(input("nota3:"))
var4=float(input("nota4:"))
x=((var1*1)+(var2*2)+(var3*3)+(var4*4))/(10)
print(round(x, 2))

-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 16:45:15) 
-- CODE:
var1=float(input("nota1:"))
var2=float(input("nota2:"))
var3=float(input("nota3:"))
var4=float(input("nota4:"))
x=((var1*1)+(var2*2)+(var3*3)+(var4*4))/(10)
print(round(x, 2))

-- EXECUTION TIME:
0.222117
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
